--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,38 @@
+.fraunces-bold {
+    font-family: "Fraunces", serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings:
+        "SOFT" 0,
+        "WONK" 0;
+}
+
+.fraunces-black {
+    font-family: "Fraunces", serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+    font-variation-settings:
+        "SOFT" 0,
+        "WONK" 0;
+}
+
+.barlow-semibold {
+    font-family: "Barlow", serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
 header {
-    height: 800px;
-    /* height: 100vh; */
+    /* height: 800px; */
+    height: 100vh;
     background-image: url(../images/desktop/image-header.jpg);
     background-size: cover;
     padding-top: 34px;
     position: relative;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center bottom;
 }
 
 header img {
@@ -19,29 +45,24 @@ header div:first-child {
     margin-right: auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 105px;
 }
 
 header nav {
-    font-family: 'Barlow';
-    font-style: normal;
-    font-weight: 600;
     font-size: 18px;
     line-height: 25px;
-    letter-spacing: -0.128571px;
+    letter-spacing: -0.12px;
     color: #FFFFFF;
     display: flex;
     gap: 47px;
     align-items: center;
 }
 
-header a {
-    font-family: 'Fraunces';
-    font-style: normal;
-    font-weight: 700;
+header a:last-child {
     font-size: 15px;
     line-height: 25px;
-    letter-spacing: -0.107143px;
+    letter-spacing: -0.11px;
     text-transform: uppercase;
     color: #24303E;
     display: flex;
@@ -53,10 +74,7 @@ header a {
     border-radius: 28px;
 }
 
-header article {
-    font-family: 'Fraunces';
-    font-style: normal;
-    font-weight: 900;
+h1 {
     font-size: 56px;
     line-height: 69px;
     text-align: center;
@@ -64,7 +82,8 @@ header article {
     text-transform: uppercase;
     color: #FFFFFF;
 }
-.arrow{
+
+.arrow {
     position: absolute;
     top: 50%;
     width: 40px;
@@ -73,4 +92,71 @@ header article {
     background-size: cover;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.section {
+    width: 100%;
+    height: 75vh;
+    display: flex;
+}
+
+.section article {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section article div {
+    width: 445px;
+    height: 285px;
+}
+
+.section>div {
+    width: 50%;
+    height: 100%;
+    background-image: url(../images/desktop/image-transform.jpg);
+    align-items: flex-end;
+    background-size: cover;
+}
+
+.section h2 {
+    font-size: 40px;
+    line-height: 49px;
+    letter-spacing: -0.285714px;
+    color: #24303E;
+    margin-bottom: 32px;
+}
+
+.section p {
+    font-size: 18px;
+    line-height: 30px;
+    letter-spacing: -0.128571px;
+    color: #808397;
+    margin-bottom: 32px;
+}
+
+.section a {
+    font-size: 15px;
+    line-height: 25px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #24303E;
+    display: inline-block;
+    position: relative;
+    width: 300px;
+    height: 200px;
+    background-color: #ccc;
+}
+.section a::before{
+    width: 137px;
+    height: 10px;
+    background-color: #FAD400;
+    border-radius: 28px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.section .glass{
+    background-image: url(../images/desktop/image-stand-out.jpg);   
 }
